--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "country-list": "^2.3.0",
+    "framer-motion": "^12.12.1",
     "iso-639-1": "^3.1.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -19,12 +20,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.6",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.10.1",
     "web-vitals": "^2.1.4"
   },
