--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.48",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
