--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.10.1",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.10.1",
+    "tinycolor2": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
