--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "country-list": "^2.3.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "iso-639-1": "^3.1.5",
     "jwt-decode": "^4.0.0",
