--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "country-list": "^2.3.0",
@@ -19,8 +19,10 @@
     "leaflet-draw": "^1.0.4",
     "moment-timezone": "^0.5.48",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
@@ -29,6 +31,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-time-picker": "^7.0.0",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.10.1",
     "tinycolor2": "^1.6.0",
