--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet-draw": "^1.0.4",
     "moment-timezone": "^0.5.48",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-countup": "^6.5.3",
