--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "lucide-react": "^0.546.0",
     "moment-timezone": "^0.5.48",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
