--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-time-picker": "^7.0.0",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.10.1",
+    "socket.io-client": "^4.8.1",
     "tinycolor2": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
