--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "country-list": "^2.3.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
+    "html2canvas": "^1.4.1",
     "iso-639-1": "^3.1.5",
+    "jspdf": "^3.0.4",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
